--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Justin Bieber Songs</title>
-    <eta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet">
     
 </head>
