Adding Loading Animation

--- a/weather/index.html
+++ b/weather/index.html
@@ -85,6 +85,7 @@
 
         <span id="year"></span> Copyright <sup>&copy;</sup>, Nishant Shah
     </center>
+    <div class="modal-container"></div>
     <script src="script.js"></script>
 </body>
 
